[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "whitebox"
version = "0.1.0"
description = "Python SDK for the WhiteBox AI decision observability API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Spaceman Tech", email = "hello@spacemantech.ai" },
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://whiteboxhq.ai"
Documentation = "https://whiteboxhq.ai/docs"
Repository = "https://github.com/spacemantech/whitebox-python"

[tool.setuptools.packages.find]
include = ["whitebox*"]
