[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whiteboxhq"
version = "0.1.1"
description = "Python SDK for the WhiteBox AI decision observability API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Spaceman Tech", email = "hello@spacemantech.ai" },
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://whiteboxhq.ai"
Documentation = "https://whiteboxhq.ai/docs"
Repository = "https://github.com/whiteboxhq/whitebox-python"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["whitebox*"]
